# baytevora-os

./: README.md
desktop/shell/: CMakeLists.txt
desktop/shell/docs/: README.md
desktop/shell/include/bos/: Application.h  ApplicationInfo.h  ApplicationManager.h  ApplicationRegistry.h  ApplicationSearchProvider.h  ArchiveApplication.h  ArchiveDocument.h  ArchiveEntry.h  ArchiveManager.h  BrandingManager.h  BrowserApplication.h  BrowserBookmark.h  BrowserBookmarkManager.h  BrowserDownload.h  BrowserDownloadManager.h  BrowserHistoryEntry.h  BrowserHistoryManager.h  BrowserModule.h  BrowserPermission.h  BrowserPrivacySettings.h  BrowserTab.h  CalculatorApplication.h  CalculatorEngine.h  CalculatorManager.h  ClipboardModule.h  DesignTokens.h  DesktopIconsModule.h  DesktopItem.h  DragManager.h  DragOperation.h  DragType.h  FileFavoriteManager.h  FileManagerApplication.h  FileSearchManager.h  FileSystemModel.h  IconManager.h  ImageSlideshowManager.h  ImageViewerApplication.h  InstalledApplication.h  LauncherModule.h  (+54 more)
desktop/shell/qml/: AboutBosScreen.qml  ApplicationCard.qml  ApplicationDetails.qml  ApplicationGrid.qml  ArchiveEntryDelegate.qml  ArchiveSidebar.qml  ArchiveToolButton.qml  ArchiveToolbar.qml  ArchiveWindow.qml  BreadcrumbBar.qml  BrowserBookmarkDelegate.qml  BrowserDownloadDelegate.qml  BrowserDownloadsWindow.qml  BrowserPermissionList.qml  BrowserPrivacySettingsPage.qml  BrowserStatusBar.qml  BrowserTabButton.qml  BrowserView.qml  CalculatorKeypad.qml  CalculatorWindow.qml  CategoryList.qml  CategorySidebar.qml  CellLabel.qml  CheckUpdatesButton.qml  Clock.qml  DependencyViewer.qml  Desktop.qml  DesktopIcon.qml  DesktopIcons.qml  DesktopSelection.qml  DesktopSurface.qml  DeviceList.qml  DragIndicator.qml  DropTarget.qml  FeaturedSection.qml  FileList.qml  FileManagerWindow.qml  FirstBootWizard.qml  HeaderLabel.qml  ImageCanvas.qml  (+111 more)
desktop/shell/src/: Application.cpp  ApplicationManager.cpp  ApplicationSearchProvider.cpp  ArchiveManager.cpp  BrowserBookmark.cpp  BrowserDownload.cpp  BrowserPage.cpp  BrowserPermission.cpp  BrowserPermissionManager.cpp  BrowserSession.cpp  CalculatorApplication.cpp  CalculatorManager.cpp  ClipboardManager.cpp  DesktopIconsModule.cpp  DesktopItem.cpp  DesktopManager.cpp  DesktopModel.cpp  DesktopSearchProvider.cpp  DragModule.cpp  FileManagerApplication.cpp  FileSystemModel.cpp  IconManager.cpp  ImageDocument.cpp  ImageViewerApplication.cpp  ImageViewerManager.cpp  InstalledApplication.cpp  LockManager.cpp  LockModule.cpp  LoginState.cpp  MediaPlayerManager.cpp  NetworkApplication.cpp  NoteFolder.cpp  NoteSearchManager.cpp  NotificationModule.cpp  PackageManager.cpp  PackageManagerApplication.cpp  PackageState.cpp  PackageType.cpp  PdfStudioDocument.cpp  PdfStudioManager.cpp  (+35 more)
foundation/: CMakeLists.txt
foundation/config/: foundation-config.yaml
foundation/debian-base/: packages.list  sources.list
foundation/display-manager/: sddm.conf
foundation/docs/: README.md
foundation/filesystem/etc/: fstab.template  hostname.template  hosts.template  issue.template  os-release.template
foundation/filesystem/etc/sudoers.d/: live-user.template
foundation/filesystem/usr/share/applications/: baytevora-browser.desktop  baytevora-pdf-studio.desktop  baytevora-settings.desktop  baytevora-store.desktop  mimeinfo.cache
foundation/filesystem/usr/share/xsessions/: Baytevora.desktop
foundation/include/bldf/: ApplicationRegistrar.h  ComponentInstaller.h  DebianBaseBuilder.h  DisplayManagerConfigurator.h  FilesystemConfigurator.h  ServiceConfigurator.h
foundation/scripts/: assemble_iso.sh  configure_display_manager.sh  configure_filesystem.sh  configure_grub.sh  configure_services.sh  generate_initramfs.sh  generate_squashfs.sh  install_baytevora_components.sh  install_kernel.sh  prepare_debian_base.sh  register_applications.sh  validate_foundation.sh
foundation/services/config/: NetworkManager.conf  cups.conf  pipewire.conf
foundation/services/systemd/: baytevora-application.service  baytevora-storage.service
foundation/src/: ApplicationRegistrar.cpp  ComponentInstaller.cpp  DebianBaseBuilder.cpp  DisplayManagerConfigurator.cpp  FilesystemConfigurator.cpp  ServiceConfigurator.cpp  main.cpp
iso/: CMakeLists.txt
iso/EFI/BOOT/: BOOTX64.EFI
iso/boot/: initramfs.img  vmlinuz
iso/boot/grub/: grub.cfg
iso/config/: build-config.yaml  iso-config.json
iso/docs/: README.md
iso/filesystem/rootfs/etc/: baytevora-release  group  hosts  passwd  shadow
iso/filesystem/rootfs/etc/gdm3/: custom.conf
iso/filesystem/rootfs/etc/systemd/system/: baytevora-printing.service
iso/filesystem/rootfs/home/live/.config/autostart/: baytevora-installer.desktop
iso/filesystem/rootfs/opt/baytevora/: registry.json
iso/filesystem/rootfs/opt/baytevora/desktop/docs/: README.md
iso/filesystem/rootfs/opt/baytevora/desktop/qml/: AboutDialog.qml  AddressBar.qml  ApplicationDetails.qml  ArchiveFileList.qml  ArchiveStatusBar.qml  BootScreen.qml  BrowserBookmarkList.qml  BrowserBookmarksWindow.qml  BrowserDownloadList.qml  BrowserHistoryDelegate.qml  BrowserHistoryList.qml  BrowserHistoryWindow.qml  BrowserPermissionDelegate.qml  BrowserPermissionPrompt.qml  BrowserPrivacyWindow.qml  BrowserTabBar.qml  BrowserToolButton.qml  BrowserToolbar.qml  BrowserWindow.qml  CalculatorButton.qml  CalculatorDisplay.qml  CalculatorStatusBar.qml  CellLabel.qml  Clock.qml  CpuCard.qml  Desktop.qml  DesktopIcon.qml  DesktopSurface.qml  (+74 more)
iso/filesystem/rootfs/opt/baytevora/installer/: CMakeLists.txt
iso/filesystem/rootfs/usr/lib/baytevora/: package-manager-backend
iso/filesystem/rootfs/usr/lib/systemd/: systemd
iso/filesystem/rootfs/usr/share/applications/: baytevora-welcome.desktop
iso/filesystem/rootfs/var/lib/dpkg/: status
iso/include/big/: BuildConfiguration.h  BuildLogger.h  ISOBuilder.h  ISOConfiguration.h  ImageManifest.h
iso/scripts/: build_iso.sh  clean_iso.sh  generate_manifest.sh  live-init  prepare_filesystem.sh  validate_iso.sh
iso/src/: BuildConfiguration.cpp  BuildLogger.cpp  ISOBuilder.cpp  ISOConfiguration.cpp  ImageManifest.cpp  main.cpp
(+228 files in other folders)
